[gd_scene load_steps=24 format=3 uid="uid://cmmp5s70l5jk1"]

[ext_resource type="PackedScene" uid="uid://udfbeighyw02" path="res://game/weapons/weapon_manager/weapon_manager.tscn" id="1_74sb1"]
[ext_resource type="Script" uid="uid://1wcew5qbsscb" path="res://game/player/player.gd" id="1_lijdu"]
[ext_resource type="Script" uid="uid://bpak7gpg1vr2n" path="res://game/player/player_stats/player_stats.gd" id="2_4hmi3"]
[ext_resource type="Texture2D" uid="uid://d3g85xp75huh7" path="res://game/player/player.png" id="2_oobxn"]
[ext_resource type="Script" uid="uid://1qwl7sdifre1" path="res://game/shared/components/health/health_component.gd" id="3_fhwbb"]
[ext_resource type="Material" uid="uid://c0175ljwq3nwg" path="res://common/materials/entity_material.tres" id="4_0yqo5"]
[ext_resource type="PackedScene" uid="uid://308gnb3avrh" path="res://game/weapons/03_pistol/pistol.tscn" id="5_hspnr"]
[ext_resource type="PackedScene" uid="uid://bhsxt5yp8ref6" path="res://game/weapons/02_assault_rifle/assault_rifle.tscn" id="6_adb3p"]
[ext_resource type="AudioStream" uid="uid://vu5xqfjx4ary" path="res://game/pickups/experience/xp.wav" id="6_cbvat"]
[ext_resource type="PackedScene" uid="uid://dfcam3k02yyg" path="res://game/weapons/04_rifle/rifle.tscn" id="7_a45bg"]
[ext_resource type="AudioStream" uid="uid://cjfdn66g8j23e" path="res://game/player/hurt.wav" id="7_k7285"]
[ext_resource type="PackedScene" uid="uid://gjg3p6e850qv" path="res://game/weapons/01_shotgun/shotgun.tscn" id="8_84caw"]
[ext_resource type="PackedScene" uid="uid://dtdby8i2l747i" path="res://game/weapons/05_spear_gun/spear_gun.tscn" id="9_tt8oo"]
[ext_resource type="PackedScene" uid="uid://tf016exhsnt6" path="res://game/weapons/09_metal_bat/metal_baseball_bat.tscn" id="10_gm1vb"]
[ext_resource type="PackedScene" uid="uid://bwsx4obp21exm" path="res://game/weapons/10_friendly_fish/friendly_fish.tscn" id="11_wplxy"]
[ext_resource type="PackedScene" uid="uid://b4v2ivpwj8wek" path="res://game/weapons/06_grenade_launcher/grenade_launcher.tscn" id="12_tic4w"]
[ext_resource type="PackedScene" uid="uid://cvd2vqvq5m8bj" path="res://game/weapons/07_dynamite_bundle/dynamite_bundle.tscn" id="13_eftar"]
[ext_resource type="PackedScene" uid="uid://3eneko28ltuh" path="res://game/weapons/08_frag_grenade/frag_grenade.tscn" id="14_builu"]

[sub_resource type="Resource" id="Resource_8aec4"]
script = ExtResource("2_4hmi3")
damage_mod = 1.0
damage_mod_gun = 1.0
damage_mod_melee = 1.0
damage_mod_explosive = 1.0
added_damage = 0
added_damage_gun = 0
added_damage_melee = 0
added_damage_explosive = 0
crit_chance = 0.0
crit_chance_gun = 0.0
crit_chance_melee = 0.0
crit_damage_mod = 2.0
crit_damage_mod_gun_added = 0.0
crit_damage_mod_melee_added = 0.0
attack_speed_mod = 1.0
attack_speed_mod_gun = 1.0
attack_speed_mod_melee = 1.0
attack_speed_mod_explosive = 1.0
knockback_mod = 1.0
max_health = 100
max_health_mod = 1.0
armor = 1
regen_speed = 1.0
can_regen = true
can_dodge = true
movement_speed = 80.0
movement_speed_mod = 1.0
absorb_range_mod = 1.0
area_of_effect_mod = 1.0
melee_multistrike = 0
added_pierce = 0
extra_projectiles = 0
projectile_velocity_mod = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_x8vvb"]

[sub_resource type="Gradient" id="Gradient_ekp4g"]
offsets = PackedFloat32Array(0.5, 0.5)
colors = PackedColorArray(0, 0, 0, 0.380392, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g83us"]
gradient = SubResource("Gradient_ekp4g")
width = 40
height = 26
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_2816h"]
radius = 92.0489

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_lijdu")
player_stats = SubResource("Resource_8aec4")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_fhwbb")

[node name="WeaponManager" parent="." instance=ExtResource("1_74sb1")]
position = Vector2(0, -26)
weapon_pool = {
"bat_metal": ExtResource("10_gm1vb"),
"dynamite_thrower": ExtResource("13_eftar"),
"fish_friendly": ExtResource("11_wplxy"),
"grenade_launcher": ExtResource("12_tic4w"),
"grenade_thrower": ExtResource("14_builu"),
"pistol": ExtResource("5_hspnr"),
"rifle_assault": ExtResource("6_adb3p"),
"rifle_bolt": ExtResource("7_a45bg"),
"shotgun_pump": ExtResource("8_84caw"),
"spear_gun": ExtResource("9_tt8oo")
}
max_weapons = 5

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x8vvb")
metadata/_edit_lock_ = true

[node name="Visuals" type="Node2D" parent="."]

[node name="Shadow" type="Sprite2D" parent="Visuals"]
position = Vector2(0, 5)
texture = SubResource("GradientTexture2D_g83us")
metadata/_edit_lock_ = true

[node name="Sprite" type="Sprite2D" parent="Visuals"]
material = ExtResource("4_0yqo5")
texture = ExtResource("2_oobxn")
offset = Vector2(-3.66, -25.925)
metadata/_edit_lock_ = true

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(-2.00842e-12, -1.78639e-12)
position_smoothing_enabled = true

[node name="PickupCollectionRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupCollectionRange"]
shape = SubResource("CircleShape2D_2816h")
metadata/_edit_lock_ = true

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ExperiencePickupSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_cbvat")
bus = &"Effects"

[node name="HurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_k7285")
volume_db = 10.0
bus = &"Effects"
